# fastapi-boilerplate

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
core/: app.py  core_router.py
settings/: config.py
tests/: core_test.py
