[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Mateusz Pawlikowski <mateusz@pepecodes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.29"
pytest = "^8.2.0"
alembic = "^1.13.1"
ruff = "^0.4.3"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
